# TEST_JOB

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  env.template  pyproject.toml  pytest.ini
api/database/: connection.py  models.py
api/server/: JWT_func.py  main.py
api/server/routes/: auth_routes.py  routes_room.py
api/server/schema/: auth_schema.py  room_schema.py
tests/: conftest.py  test_auth.py  test_room.py
